# ARTalk

./: README.md  inference.py  pyproject.toml
app/: models.py  utils_videos.py
app/GAGAvatar/: utils_renderer.py
app/flame_model/: renderer_utils.py
scripts/: batch_inference.sh
train_code/: README.md
train_code/configs/: artalk_codec.yaml  artalk_gen.yaml
train_code/core/data/: artalk_data.py
train_code/core/libs/flame_model/: FLAME.py  renderer_utils.py
train_code/core/models/artalk_codec/: __init__.py  models.py
train_code/core/models/artalk_gen/: __init__.py  models.py  transformer.py
train_code/core/trainer/: inferencer.py
